--- a/index.html
+++ b/index.html
@@ -1,63 +1,221 @@
 <!DOCTYPE html>
+
 <head>
     <title>
-        Reach's blog
+        Reach's website
     </title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="./mfw.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </head>
-<body>
-    <div class="headtitle">
-        <h1>
-            Welcome to my blog!
-        </h1>
-    </div>
 
-    <div class="subject">
-        <div class="center">
-        <p>
-        <a href="index.html">Home</a>
-        <a href="my-art.html">Art</a>
-        <a href="dancing.html">Dancing</a>
-        <a href="Movies.html">Movies</a>
-        <a href="Language.html">Language</a>
-        </p>
+<body>
+    <br>
+    <br>
+    <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Menu
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+            <a href="file:///C:/Users/Jr_Reach/Documents/Software%20class/Practice%20website/boostrap.html"><button class="dropdown-item" type="button">Home</button></a>
+            <a href="file:///C:/Users/Jr_Reach/Documents/Software%20class/Practice%20website/my%20art%20piece.html"><button class="dropdown-item" type="button">My Art pieces</button></a>
+            </div>
+          </div>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row">
+                <div class="col-6">
+            <div class="card">
+                <img src="images/REACH.JPG" class="card-img-top rounded-circle" style="width: 40%">
+                <div class="card-body">
+                    <h1 class="card-title text-info ml-5"></h1><img src="./images/myname.PNG" alt="Reach">
+                    <p class="card-text text-info"><i>Don't be affraid to take risk.</i></p>
+                </div>             
+                </div>
+            </div>
+                <div class="col-6">
+                    <div class="card">
+                        <p class="card-text text-info">        Hello everyone! My name is <b>Reach</b> and I'm 13 years old. I learn in a school called 
+                            <b>Liger leadership academy</b>. However, I was born in a province in cambodia called 
+                            <b>Takeo</b> in 11, july, 2006. My favorite school subject is art,
+                            It has been one of my favorite things to do. I mosly do digital art, you can click on 
+                            the link to see some of my art work but I also do portrait art too. Moreover, when I have free time I like to watch 
+                            movies and dancing. I also like to learn alot of language as well.Besides Khmer and English,
+                            I learn Spanish, Japanese, Korea. It is fun comparing one language to the other even though
+                            I’m not that fluency in those languages. I get influenced easily, so when I heard people speaking
+                            in another language, I want to learn it too. For me, I havn't really dicided what I want to do when I grow up yet.
+                            However, I know that anything I will do will help to change my country to be a better place.</p>
+                    </div>
+                </div>
         </div>
     </div>
+    </div>
 
-    <div class="aboutme">
-    <h1>
-        About me
-    </h1>
-    <p>
-        Hello everyone! My name is <b>Reach</b> and I'm 13 years old. I learn in a school called 
-        <b>Liger leadership academy</b>. However, I was born in a province in cambodia called 
-        <b>Takeo</b> in 11, july, 2006. My favorite school subject is art,
-        It has been one of my favorite things to do. I mosly do digital art, you can click on 
-        the link to see some of my art work but I also do portrait art too. Moreover, when I have free time I like to watch 
-        movies and dancing. I also like to learn alot of language as well.Besides Khmer and English,
-        I learn Spanish, Japanese, Korea. It is fun comparing one language to the other even though
-        I’m not that fluency in those languages. I get influenced easily, so when I heard people speaking
-        in another language, I want to learn it too. For me, I havn't really dicided what I want to do when I grow up yet.
-        However, I know that anything I will do will help to change my country to be a better place.
-        If you want to know more about liger click on this link: 
-        <a href="http://www.ligeracademy.org/">Liger</a>.
-    </p>
+    <br>
+    <br>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+            <div class="card">
+                <a href="http://www.ligeracademy.org/"><img src="images/liger.png" class="card-img-top rounded" style="width: 80%"></a>
+                <div class="card-body">
+                    <h4 class="card-title text-info">Liger Leadership Academy</h4>
+                    <p class="card-text text-info">This is the school I go to and it is the best school for me to be in to change my country. </p>
+                </div>
+            </div>
+            </div>
+        </div>
     </div>
-    <div class="leftcolom">
-        <br>
-        <br>
-        <img src="images/me.PNG" alt="My profile picture" width="300" height="300">
-        <br>
-        <br>
-        <img src="images/liger.png" alt="liger" width="550" height="270">
-        <br>
-        <br>
-        <img src="images/takeo.png" alt="takeo" width="300" height="261">
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <br>
+    <br>
+    <div class="container">
+            <div class="row">
+                <div class="col-6 offset-2">
+                <div class="card">
+                    <img src="images/takeo.png" class="card-img-top rounded" style="width: 80%">
+                    <div class="card-body">
+                        <h4 class="card-title text-info">My hometown "Takeo"</h4>
+                        <p class="card-text text-info">Takeo is a beatiful place full of green rice field, silk weaving, tropical food and a peacful environment.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+        </div>
+        <br>
+        <br>
+
+        <div class="container">
+                <div class="row">
+                    <div class="col-6 offset-4">
+                    <div class="card">
+                        <img src="images/watergirl.png" class="card-img-top rounded" style="width: 80%">
+                        <div class="card-body">
+                            <h4 class="card-title text-info">Art, favorite school subject</h4>
+                            <p class="card-text text-info">This is one of my digital painting that I drew.</p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <br>
+            <br>
+            <div class="container">
+                    <div class="row">
+                        <div class="col-6 offset-6">
+                        <div class="card">
+                            <img src="./images/hiphop.jpg" class="card-img-top rounded" style="width: 80%">
+                            <div class="card-body">
+                                <h4 class="card-title text-info">Dancing my hobbie</h4>
+                                <p class="card-text text-info">Before, I never know that I was into dancing but when I come to Liger, I know that I can dance really well.
+                                    The kind of songs that I dance to are <b>hip hop</b>, <b>kpop</b>, and <b>contemporary</b>. I like hip hop
+                                    style because my teacher teach me that. For kpop, it is because I like to lisent to their music video and
+                                    they have the dance for the song too, so I can dance to their choreography. Lastly, contemporary is touching
+                                    and I can show my emotion through the dance.</p>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+                <br>
+                <br>
+                <div class="container">
+                        <div class="row">
+                            <div class="col-6">
+                            <div class="card">
+                                <img src="./images/like.jpg" class="card-img-top rounded" style="width: 80%">
+                                <div class="card-body">
+                                    <h4 class="card-title text-info">Like</h4>
+                                    <ul>
+                                        <li>Pizza</li>
+                                        <li>Hoodie</li>
+                                        <li>Kpop</li>
+                                        <li>Ice-cream</li>
+                                        <li>Art class</li>
+                                        <li>Slime</li>
+                                        <li>Video game</li>
+                                        <li>Black pink</li>
+                                        <li>Hot dog</li>
+                                        <li>Cold weather</li>
+                                        <li>Snow</li>
+                                        <li>Vanila flavor</li>
+                                        <li>Cake</li>
+                                        <li>Swimming</li>
+                                        <li>Dog and Cat</li>
+                                        <li>Number 21</li>
+                                        <li>Pokemon</li>
+                                        <li>Anime</li>
+                                        <li>South Korea</li>
+                                        <li>Youtube</li>
+                                        <li>Ramen</li>
+                                        <li>Blue</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            </div>
+                            <div class="col-6">
+                                    <div class="card">
+                                        <img src="./images/like.png" class="card-img-top rounded" style="width: 80%">
+                                        <div class="card-body">
+                                            <h4 class="card-title text-info">Dislike</h4>
+                                            <ul>
+                                                <li>Vegetable</li>
+                                                <li>Sleeveless shirt</li>
+                                                <li>Country music</li>
+                                                <li>Low battery</li>
+                                                <li>Science class</li>
+                                                <li>Sticker</li>
+                                                <li>House work</li>
+                                                <li>Momoland</li>
+                                                <li>Thinking about embarrassing moment</li>
+                                                <li>Hot weather</li>
+                                                <li>Sun</li>
+                                                <li>Alcohol</li>
+                                                <li>Bread's crust</li>
+                                                <li>Football</li>
+                                                <li>Mosquito</li>
+                                                <li>Number 1</li>
+                                                <li>Drama movie</li>
+                                                <li>Talking about death</li>
+                                                <li>Desert</li>
+                                                <li>Twitter</li>
+                                                <li>Viral things</li>
+                                                <li>Yellow</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
 
 </body>
+
+
+</html>
