--- a/my art piece.html
+++ b/my art piece.html
@@ -29,8 +29,8 @@
               Menu
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <a href="file:///C:/Users/Jr_Reach/Documents/Software%20class/Practice%20website/boostrap.html"><button class="dropdown-item" type="button">Home</button></a>
-            <a href="file:///C:/Users/Jr_Reach/Documents/Software%20class/Practice%20website/my%20art%20piece.html"><button class="dropdown-item" type="button">My art pieces</button></a>
+            <a href="index.html"><button class="dropdown-item" type="button">Home</button></a>
+            <a href="myartpiece.html"><button class="dropdown-item" type="button">My art pieces</button></a>
             </div>
           </div>
     <br>
